infra/k3d-infra/.tofu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duncarbox
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
